# Django_Deploy

prod/: .env  Dockerfile  pyproject.toml  requirements.txt
prod/mysite/database/: db.sqlite3
prod/mysite/mysite/: settings.py
